# voice-bakery-demo

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
app/: constants.py
app/service/: __init__.py  db.py  products.py
client/components/: App.jsx  SessionControls.jsx  ToolPanel.jsx
